[package]
name = "rustnarok"
version = "0.1.0"
authors = ["Allan Jorge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
num-traits = "0.2"
num-derive = "0.3"
nom = "5.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
